info added to package.json

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mandatory_1",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "description": "Mandatory 1 assignment for full-stack Node.js elective, autumn 2023",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tommy Helle Jensen",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
