--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:prod": "cross-env PORT=80 node app.js",
+    "start:dev": "cross-env PORT=8080 nodemon.cmd app.js"
   },
   "keywords": [],
   "author": "Tommy Helle Jensen",
   "license": "MIT",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.18.2"
   }
 }
