package.json made ready for deployment

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:prod": "cross-env PORT=80 node app.js",
-    "start:dev": "cross-env PORT=8080 nodemon.cmd app.js"
+    "start:dev": "cross-env PORT=8080 nodemon.cmd app.js",
+    "build": "npm install",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "Tommy Helle Jensen",
